--- a/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.de.yml
@@ -38,6 +38,7 @@ menu:
         search: 'Suche'
         filter_entries: 'Artikel filtern'
         export: 'Exportieren'
+        # notifications: 'Notifications'
     search_form:
         input_label: 'Suchbegriff hier eingeben'
 
@@ -249,6 +250,17 @@ entry:
     confirm:
         delete: "Bist du sicher, dass du diesen Artikel löschen möchtest?"
         delete_tag: "Bist du sicher, dass du diesen Tag vom Artikel entfernen möchtest?"
+
+# notifications:
+#     sidebar:
+#         view_more: 'View more'
+#     list:
+#         page_title: 'Notifications'
+#         mark_all_as_read: 'Mark all as read'
+#         none: "No notifications yet :'("
+#     release:
+#         title: "wallabag has been updated to version %version%"
+#         details: "View update's details"
 
 about:
     page_title: 'Über'
