--- a/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.it.yml
@@ -1,7 +1,7 @@
 security:
     login:
         page_title: 'Benvenuto in wallabag!'
-        keep_logged_in: 'Resta loggato'
+        keep_logged_in: 'Resta connesso'
         forgot_password: 'Hai dimenticato la password?'
         submit: 'Login'
         register: 'Registrati'
@@ -21,17 +21,17 @@ menu:
         archive: 'Archivio'
         all_articles: 'Tutti'
         config: 'Configurazione'
-        tags: 'Tags'
+        tags: 'Etichette'
         internal_settings: 'Strumenti'
         import: 'Importa'
-        howto: 'How to'
-        # developer: 'API clients management'
+        howto: 'Come fare'
+        developer: 'Gestione client API'
         logout: 'Logout'
         about: 'About'
         search: 'Cerca'
         save_link: 'Salva collegamento'
         back_to_unread: 'Torna ai contenuti non letti'
-        # users_management: 'Users management'
+        users_management: 'Gestione utenti'
     top:
         add_new_entry: 'Aggiungi un nuovo contenuto'
         search: 'Cerca'
@@ -44,9 +44,9 @@ footer:
     wallabag:
         elsewhere: 'Porta wallabag con te'
         social: 'Social'
-        powered_by: 'powered by'
-        about: 'About'
-    # stats: Since %user_creation% you read %nb_archives% articles. That is about %per_day% a day!
+        powered_by: 'Offerto da'
+        about: 'A proposito'
+    stats: Dal %user_creation% hai letto %nb_archives% articoli. Circa %per_day% al giorno!
 
 config:
     page_title: 'Configurazione'
@@ -55,7 +55,7 @@ config:
         rss: 'RSS'
         user_info: 'Informazioni utente'
         password: 'Password'
-        rules: 'Regole di tagging'
+        rules: 'Regole di etichettatura'
         new_user: 'Aggiungi utente'
     form:
         save: 'Salva'
@@ -65,25 +65,25 @@ config:
         language_label: 'Lingua'
         reading_speed:
             label: 'Velocità di lettura'
-            help_message: 'Puoi utilizzare dei tools online per valutare la tua velocità di lettura:'
+            help_message: 'Puoi utilizzare degli strumenti online per valutare la tua velocità di lettura:'
             100_word: 'Leggo ~100 parole al minuto'
             200_word: 'Leggo ~200 parole al minuto'
             300_word: 'Leggo ~300 parole al minuto'
             400_word: 'Leggo ~400 parole al minuto'
         action_mark_as_read:
-            # label: 'Where do you want to be redirected to after marking an article as read?'
-            # redirect_homepage: 'To the homepage'
-            # redirect_current_page: 'To the current page'
-        pocket_consumer_key_label: Consumer key per Pocket per importare i contenuti
-        # android_configuration: Configure your Android application
-        # help_theme: "wallabag is customizable. You can choose your prefered theme here."
-        # help_items_per_page: "You can change the number of articles displayed on each page."
-        # help_reading_speed: "wallabag calculates a reading time for each article. You can define here, thanks to this list, if you are a fast or a slow reader. wallabag will recalculate the reading time for each article."
-        # help_language: "You can change the language of wallabag interface."
-        # help_pocket_consumer_key: "Required for Pocket import. You can create it in your Pocket account."
+            label: "Dove vuoi essere reindirizzato dopo aver segnato l'articolo come già letto?"
+            redirect_homepage: 'Alla homepage'
+            redirect_current_page: 'Alla pagina corrente'
+        pocket_consumer_key_label: Consumer key per Pocket usata per per importare i contenuti
+        android_configuration: Configura la tua applicazione Android
+        help_theme: "wallabag è personalizzabile. Qui puoi scegliere il tuo tema preferito."
+        help_items_per_page: "Puoi cambiare il numero di articoli mostrati su ogni pagina."
+        help_reading_speed: "wallabag calcola un tempo di lettura per ogni articolo. Puoi definire qui, grazie a questa lista, se sei un lettore lento o veloce. wallabag ricalcolerà la velocità di lettura per ogni articolo."
+        help_language: "Puoi cambiare la lingua dell'interfaccia di wallabag."
+        help_pocket_consumer_key: "Richiesta per importare da Pocket. La puoi creare nel tuo account Pocket."
     form_rss:
         description: 'I feed RSS generati da wallabag ti permettono di leggere i tuoi contenuti salvati con il tuo lettore di RSS preferito. Prima, devi generare un token.'
-        token_label: 'RSS token'
+        token_label: 'Token RSS'
         no_token: 'Nessun token'
         token_create: 'Crea il tuo token'
         token_reset: 'Rigenera il tuo token'
@@ -94,43 +94,43 @@ config:
             archive: 'archiviati'
         rss_limit: 'Numero di elementi nel feed'
     form_user:
-        two_factor_description: "Abilitando la two factor authentication riceverai una e-mail con un codice per ogni nuova connesione non verificata"
+        two_factor_description: "Abilitando l'autenticazione a due fattori riceverai una e-mail con un codice per ogni nuova connesione non verificata"
         name_label: 'Nome'
         email_label: 'E-mail'
-        twoFactorAuthentication_label: 'Two factor authentication'
-        # help_twoFactorAuthentication: "If you enable 2FA, each time you want to login to wallabag, you'll receive a code by email."
+        twoFactorAuthentication_label: 'Autenticazione a due fattori'
+        help_twoFactorAuthentication: "Se abiliti l'autenticazione a due fattori, ogni volta che vorrai connetterti a wallabag, riceverai un codice via E-mail."
         delete:
-            # title: Delete my account (a.k.a danger zone)
-            # description: If you remove your account, ALL your articles, ALL your tags, ALL your annotations and your account will be PERMANENTLY removed (it can't be UNDONE). You'll then be logged out.
-            # confirm: Are you really sure? (THIS CAN'T BE UNDONE)
-            # button: Delete my account
+            title: Cancella il mio account (zona pericolosa)
+            description: Rimuovendo il tuo account, TUTTI i tuoi articoli, TUTTE le tue etichette, TUTTE le tue note ed il tuo account verranno rimossi PERMANENTEMENTE (impossibile da ANNULLARE). Verrai poi disconnesso.
+            confirm: Sei veramente sicuro? (NON PUOI TORNARE INDIETRO)
+            button: Cancella il mio account
     reset:
-        # title: Reset area (a.k.a danger zone)
-        # description: By hiting buttons below you'll have ability to remove some informations from your account. Be aware that these actions are IRREVERSIBLE.
-        # annotations: Remove ALL annotations
-        # tags: Remove ALL tags
-        # entries: Remove ALL entries
-        # confirm: Are you really really sure? (THIS CAN'T BE UNDONE)
+        title: Area di reset (zona pericolosa)
+        description: Premendo i tasti sottostanti potrai rimuovere delle informazioni dal tuo account. Ricorda che queste azioni sono IRREVERSIBILI.
+        annotations: Rimuovi TUTTE le note
+        tags: Rimuovi TUTTE le etichette
+        entries: Rimuovi TUTTI gli articoli
+        confirm: Sei veramente sicuro? (NON PUOI TORNARE INDIETRO)
     form_password:
-        # description: "You can change your password here. Your new password should by at least 8 characters long."
+        description: "Qui puoi cambiare la tua password. La tua nuova password dovrebbe essere composta da almeno 8 caratteri."
         old_password_label: 'Password corrente'
         new_password_label: 'Nuova password'
         repeat_new_password_label: 'Ripeti la nuova password'
     form_rules:
         if_label: 'se'
-        then_tag_as_label: 'allora tagga come'
+        then_tag_as_label: 'allora etichetta come'
         delete_rule_label: 'elimina'
-        # edit_rule_label: 'edit'
+        edit_rule_label: 'modifica'
         rule_label: 'Regola'
-        tags_label: 'Tag'
+        tags_label: 'Etichetta'
         faq:
             title: 'FAQ'
-            tagging_rules_definition_title: 'Cosa significa « regole di tagging » ?'
-            tagging_rules_definition_description: 'Sono regole utilizzate da wallabag per taggare automaticamente i contenuti.<br />Ogni volta che viene aggiunto un contenuto, tutte le regole di tagging rules vengono utilizzate per aggiungere i tag configurati, risparmiandoti il lavoro di classificare i contenuti manualmente.'
+            tagging_rules_definition_title: 'Cosa significa « regole di etichettatura » ?'
+            tagging_rules_definition_description: 'Sono regole utilizzate da wallabag per etichettare automaticamente i contenuti.<br />Ogni volta che viene aggiunto un contenuto, tutte le regole di etichettatura vengono utilizzate per aggiungere le etichette configurate, risparmiandoti il lavoro di classificare i contenuti manualmente.'
             how_to_use_them_title: 'Come si usano?'
-            how_to_use_them_description: 'Diciamo che vuoi taggare un contenuto come « <i>lettura veloce</i> » quando il tempo di lettura è inferiore ai 3 minuti.<br />In questo case, devi mettere « readingTime &lt;= 3 » nel campo <i>Regola</i> e « <i>lettura veloce</i> » nel campo <i>Tag</i>.<br />Molti tag si possono aggiungere contemporanemente separandoli con una virgola: « <i>lettura veloce, da leggere</i> »<br />Regole complesse possono essere scritte utilizzando gli operatori predefiniti: se « <i>readingTime &gt;= 5 AND domainName = "github.com"</i> » allora tagga « <i>lettura lunga, github </i> »'
+            how_to_use_them_description: 'Diciamo che vuoi etichettare un contenuto come « <i>lettura veloce</i> » quando il tempo di lettura è inferiore ai 3 minuti.<br />In questo case, devi mettere « readingTime &lt;= 3 » nel campo <i>Regola</i> e « <i>lettura veloce</i> » nel campo <i>Etichette</i>.<br />Molte etichette si possono aggiungere contemporanemente separandole con una virgola: « <i>lettura veloce, da leggere</i> »<br />Regole complesse possono essere scritte utilizzando gli operatori predefiniti: se « <i>readingTime &gt;= 5 AND domainName = "github.com"</i> » allora etichetta « <i>lettura lunga, github </i> »'
             variables_available_title: 'Quali operatori e variabili posso utilizzare per scrivere delle regole?'
-            variables_available_description: 'I seguenti operatori e variabili posso essere utilizzati per scrivere regole di tagging:'
+            variables_available_description: 'I seguenti operatori e variabili posso essere utilizzati per scrivere regole di etichettatura:'
             meaning: 'Significato'
             variable_description:
                 label: 'Variabile'
